# babble

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  docs-obsidian  flake.nix  justfile  seed  server.py
.cargo/: config.toml
.claude/skills/brainstorming/: SKILL.md
.claude/skills/executing-plans/: SKILL.md
.claude/skills/finishing-a-development-branch/: SKILL.md
.claude/skills/requesting-code-review/: SKILL.md
.claude/skills/subagent-driven-development/: SKILL.md
.claude/skills/using-git-worktrees/: SKILL.md
.claude/skills/writing-plans/: SKILL.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/src/audio/: resampler.rs  vad.rs
crates/app/src/integration/: config.rs  mod.rs
crates/app/src/llm/: inference.rs  mod.rs  pipeline.rs  prompts.rs
crates/app/src/messages/: types.rs
crates/app/src/speech/: mod.rs  stt.rs  tts.rs
crates/app/src/ui/: app.rs  mod.rs  state.rs
crates/app/src/ui/components/: audio_player.rs  debug_panel.rs  input_bar.rs  mod.rs  status_bar.rs  text_display.rs  waveform.rs
crates/app/src/utils/: channels.rs  mod.rs
crates/app/tests/: integration_tests.rs
crates/proto/: Cargo.toml  README.md
crates/proto/src/: error.rs  lib.rs  main.rs  screenshot.rs  state.rs
crates/proto/src/audio/: buffer.rs  input.rs  mod.rs
crates/proto/src/message/: mod.rs
crates/proto/src/processor/: handler.rs  llm.rs  mod.rs  orchestrator.rs  stt.rs
crates/proto/src/testconfig/: mod.rs  runner.rs
crates/proto/src/ui/: app.rs  mod.rs  state.rs  theme.rs
crates/proto/src/ui/components/: debug_panel.rs  mod.rs  record_button.rs  response_display.rs  waveform.rs
crates/proto/tests/: basic_flow_testconfig.toml  error_no_microphone_testconfig.toml  graceful_error_recovery_testconfig.toml  llm_streaming_testconfig.toml  rapid_toggle_testconfig.toml  record_audio_testconfig.toml  report_failure_testconfig.toml  short_recording_testconfig.toml  stop_command_testconfig.toml  stt_processing_testconfig.toml  test_actions_wiring_testconfig.toml  ui_screenshot_tests.rs
crates/record/: Cargo.toml  README.md
docs/: vibe-kanban-skill-integration.md
examples/: README.md  audio_recorder.rs  simple_transcribe.rs  test_mic_recording.rs
src/: lib.rs  main.rs
src/audio/: buffer.rs  input.rs  mod.rs  output.rs  preprocessor.rs  resampler.rs  wav.rs
src/integration/: orchestrator.rs
src/llm/: config.rs  context.rs  inference.rs  mod.rs  pipeline.rs  prompts.rs  tts_parser.rs
src/messages/: mod.rs  storage.rs
src/speech/: mod.rs  stt.rs  tts.rs
src/ui/: app.rs  mod.rs  state.rs  theme.rs
src/ui/components/: debug_panel.rs  input_bar.rs  message_list.rs  waveform.rs
src/utils/: channels.rs  mod.rs  perf.rs
tests/: integration_tests.rs  ui_recording_tests.rs  ui_tests.rs
