[package]
name = "babble"
version = "0.1.0"
edition = "2021"
authors = ["Babble Contributors"]
description = "A voice-enabled AI assistant with real-time speech processing"
license = "MIT"

[dependencies]
# LLM
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
futures = "0.3"
async-stream = "0.3"

# Speech-to-Text
whisper-rs = "0.12"

# Voice Activity Detection
voice_activity_detector = "0.2"

# Text-to-Speech
sherpa-rs = { git = "https://github.com/thewh1teagle/sherpa-rs.git", features = ["tts"] }

# Audio
cpal = { version = "0.15", optional = true }
rubato = "0.15"
hound = "3.5"
ringbuf = "0.4"

# GUI
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "x11", "wayland", "accesskit"] }
egui = "0.30"

# Testing
egui_kittest = { version = "0.30", optional = true }
kittest = { version = "0.1", optional = true }

# Async & Channels
tokio = { version = "1.42", features = ["full"] }
crossbeam-channel = "0.5"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

[dev-dependencies]
# Note: egui_kittest requires matching egui version - tests use unit tests instead

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[features]
default = ["audio-io"]
audio-io = ["cpal"]
ui-testing = ["egui_kittest", "kittest"]

[dev-dependencies]
egui_kittest = "0.30"
kittest = "0.1"
