[workspace]
members = [
    "crates/app",
    "crates/proto",
    "crates/record",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Babble Contributors"]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
