[package]
name = "audio-recorder-example"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eframe = "0.29"
egui = "0.29"
cpal = "0.15"
hound = "3.5"
anyhow = "1.0"
rodio = "0.19"

[[bin]]
name = "audio-recorder-example"
path = "src/main.rs"

[[bin]]
name = "test-mic"
path = "src/test_mic.rs"
